--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
 
 
-    <img src="C:\Users\Fion\Desktop\Create f\pic\dribble.gif" width="300px" height="150px" alt="My Hero doctor strange">
+    <img src="images\10187.jpg" width="300px" height="150px" alt="My Hero doctor strange">
     
 
     
@@ -49,3 +49,4 @@
 <script src="scripts/main.js"></script>
   </body>
 </html>
+
