--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Harris say Hello</title>
+    <title>Fion say Hello</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
 
 
