--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Fion say Hello</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-
-
   </head>
   <body>
   	<h1></h1>
@@ -46,7 +44,13 @@
    <a href="https://translate.google.com/#en/zh-CN/a%20hypertext%20reference%0Aanchor">Google Translater</a></br/>
  
 <button>Change user</button>
-<script src="scripts/main.js"></script>
+<br>
+<input type="number" name="first" value="" placeholder="please input your first number">
+*
+<input type="number" name="second" value="" placeholder="please input your second number">
+<input type="button" name="multiply" value="计算" id="multiply">
+<input type="text" name="result" value="" id='result'>
   </body>
+  <script src="scripts/main.js"></script>
 </html>
 
